# open-news-contracts

./: .gitignore  Anchor.toml  README.md
programs/solana-news/: Cargo.toml
programs/solana-news/src/: errors.rs  lib.rs
tests/: solana-feed.ts  solana-news.ts
